--- a/style.css
+++ b/style.css
@@ -112,7 +112,8 @@ footer p {
 }
 /* ----報導部分----- */
 article {
-    width: 74%;
+    width: 60%;
+    order: 2;
 }
 article img {
     margin-bottom: 20px;
@@ -123,6 +124,10 @@ article p {
 /* -----邊欄----- */
 aside{
     width: 22%;
+    order: 3;
+}
+.ad {
+    order: 1;
 }
 .news-contents {
     display: flex;
@@ -187,6 +192,38 @@ aside p {
 .sub-menu a:hover{
     color: #0bd;
 }
+/*-----Menu-----*/
+#menu {
+    background-image: url(/images/menu-bg.jpg);
+    min-height: 100vh;
+}
+.menu-content {
+    max-width: 560px;
+    margin-top: 10%;
+}
+.menu-content .page-title {
+    text-align: center;
+}
+.menu-content p {
+    font-size: 1.125rem;
+    margin: 10px 0 0;
+}
+.grid {
+    display: grid;
+    gap: 26px;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); /* fr能依畫面寬度縮放 */  /*minmax(最小值,最大值)，元素寬度將不會小於240px,且配合畫面縮放*/    /*auto-fit 元素將自動換行，且填滿父原素多餘的留白*/
+    margin-top: 6%;
+    margin-bottom: 50px;
+}
+.big-box {
+    grid-column: 1 / 3; /*利用格線的開始線/終止線來設定元素的水平範圍(寬度)*/
+    grid-row: 1 / 3; /*設定垂直範圍*/
+}
+.big-box img {
+    height: 94%;
+    width: 100%;
+    object-fit: cover; /*自動裁切超出使吋的影像*/
+}
 /* -----手機板----- */
 /*使用 0~600px 的畫面尺寸瀏覽時，要讓 <h1> 標籤的文字變成藍色*/
 @media (max-width: 600px) {
@@ -245,6 +282,18 @@ aside p {
     .post-title,
     .post-cat {
         margin-left: 80px;
+    }
+    /*-----Menu-----*/
+    .menu-content {
+        margin-top: 20%;
+    }
+    /*手機瀏覽時設定成auto 高度設100% 即可正常瀏覽*/
+    .big-box {
+        grid-column: auto;
+        grid-row: auto;
+    }
+    .big-box img {
+        height: 94%;
     }
 
 }
